--- a/botapp/templates/base.html
+++ b/botapp/templates/base.html
@@ -1,23 +1,43 @@
 <!doctype html>
 <html lang="fr-FR">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="description" content="Tu cherches des informations sur un lieu? Demande à GandPy Bot!" />
-        <meta name="author" content="" />
-        <title>GrandPy Bot - Le Gand-père incollable sur les lieux</title>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Tu cherches des informations sur un lieu? Demande à GandPy Bot!" />
+    <meta name="author" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- Bootstrap is coming soon! -->
-    </head>
-    <body>
-        <header>
+    <title>GrandPy Bot - Le Gand-père incollable sur les lieux</title>
+
+    <!-- Bootstrap CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+
+    <!-- Custom CSS -->
+    <link href="{{ url_for('static', filename='css/custom.css')}}" rel="stylesheet">
+  </head>
+  <body>
+    <nav class="navbar navbar-expand">
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
             <h1>GrandPy Bot</h1>
+          </div>
+          <div class="col-sm">
             <h2>Tu cherches un endroit?</h2>
-        </header>
+          </div>
+        </div>
+      </div>
+    </nav>
 
-        {% block content %}{% endblock %}
+    {% block content %}{% endblock %}
 
-        <footer>
-            <p>Footer en construction</p>
-        </footer>
-    </body>
+    <footer>
+      <p>Footer en construction</p>
+    </footer>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+  </body>
 </html>
