--- a/botapp/templates/index.html
+++ b/botapp/templates/index.html
@@ -1,7 +1,14 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div>
-        <p>Contenu en construction</p>
+  <div class="container-fluid">
+    <div class="row">
+        <div class="col-md-4 border">
+          <p>Avatar du papi</p>
+        </div>
+        <div class="col-md-8 border">
+          <p>Parti message</p>
+        </div>
     </div>
+  </div>
 {% endblock %}
