--- a/botapp/static/css/custom.css
+++ b/botapp/static/css/custom.css
@@ -1,5 +1,6 @@
 body {
   background-color: #F7F7FF;
+  font-family: 'Raleway', sans-serif;
 }
 
 nav {
@@ -10,6 +11,14 @@ footer {
   background-color: #495867;
 }
 
-p {
-  color: blue;
+h1 {
+  color: #F7F7FF;
+}
+
+#teaser {
+  color: #F7F7FF;
+}
+
+.footer-custom {
+  color: #F7F7FF;
 }
