--- a/botapp/templates/base.html
+++ b/botapp/templates/base.html
@@ -22,29 +22,26 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,700,900" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <nav class="navbar">
-      <div class="navbar-header">
-        <h1 class="navbar-brand">GrandPy Bot</h1>
-      </div>
-      <span id="teaser" class="navbar-text">A la recherche d'un endroit?</span>
-    </nav>
+    <div class="container-fluid">
+      <header class="row">
+        <nav class="col-md-12 navbar">
+          <div class="navbar-header">
+            <h1 class="navbar-brand">GrandPy Bot</h1>
+          </div>
+          <span id="teaser" class="navbar-text">A la recherche d'un endroit?</span>
+        </nav>
+      </header>
+      {% block content %}{% endblock %}
 
-    {% block content %}{% endblock %}
-
-    <footer class="text-center">
-      <div class="footer-below">
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-12">
+      <footer class="row text-center">
+        <div class="col-lg-12">
               <a href="https://github.com/JN-Lab/OC-Pr7-GrandPyBot" class="btn btn-social-icon btn-link" target="_blank"><i class="fab fa-github fa-3x footer-custom"></i></a>
               <hr>
-              <span class="footer-custom">Julien Nuellas</span>
-              <p class="footer-custom">Projet d'Etude pour Openclassrooms</p>
-            </div>
-          </div>
+            <span class="footer-custom">Julien Nuellas</span>
+          <p class="footer-custom">Projet d'Etude pour Openclassrooms</p>
         </div>
-      </div>
-    </footer>
+      </footer>
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
