--- a/botapp/templates/index.html
+++ b/botapp/templates/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 border">
-            <p>Parti ecrire message</p>
+            {% include '_message.html' %}
           </div>
         </div>
     </div>
