integration of the form directly in index.html

--- a/botapp/templates/index.html
+++ b/botapp/templates/index.html
@@ -22,7 +22,7 @@
           <form class="form-inline col-md-12" action="" method="">
             {{ form.hidden_tag() }}
             <div class="row no-gutter">
-            <div class="input-group col-md-12 border no-margin">
+            <div class="input-group col-md-12 border no-margingit st">
               {{ form.message.label(class="sr-only") }}
               {{ form.message(class="form-control") }}
               {{ form.submit(class="btn btn-default") }}
