--- a/botapp/templates/base.html
+++ b/botapp/templates/base.html
@@ -33,7 +33,7 @@
       </header>
       {% block content %}{% endblock %}
 
-      <footer class="row text-center">
+      <footer class="row text-center fixed-bottom">
         <div class="col-lg-12">
               <a href="https://github.com/JN-Lab/OC-Pr7-GrandPyBot" class="btn btn-social-icon btn-link" target="_blank"><i class="fab fa-github fa-3x footer-custom"></i></a>
               <hr>
