--- a/botapp/templates/index.html
+++ b/botapp/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <div class="row align-items-end">
+  <div id="main-content" class="row align-items-end">
     <div class="col-md-3 border-right">
       <div class="row">
         <div class="col-md-10 offset-md-1">
@@ -18,15 +18,15 @@
                 <p>Partie historique des messages</p>
           </div>
         </div>
-        <div class="row no-gutter">
-          <form class="form-inline col-md-12" action="" method="">
+        <div class="row">
+          <form class="" action="" method="">
             {{ form.hidden_tag() }}
-            <div class="row no-gutter">
-            <div class="input-group col-md-12 border no-margingit st">
+            <div class="input-group">
               {{ form.message.label(class="sr-only") }}
-              {{ form.message(class="form-control") }}
-              {{ form.submit(class="btn btn-default") }}
-            </div>
+              {{ form.message(class="form-control", placeholder="message") }}
+              <div class="input-group-btn">
+                {{ form.submit(class="btn btn-secondary") }}
+              </div>
             </div>
           </form>
         </div>
