--- a/botapp/templates/index.html
+++ b/botapp/templates/index.html
@@ -14,7 +14,7 @@
     </div>
     <div class="col-md-9">
         <div class="row">
-          <div class="col-md-12 border">
+          <div class="col-md-12">
                 <p>Partie historique des messages</p>
           </div>
         </div>
@@ -25,7 +25,7 @@
               {{ form.message.label(class="sr-only") }}
               {{ form.message(class="form-control", placeholder="message") }}
               <div class="input-group-btn">
-                {{ form.submit(class="btn btn-secondary") }}
+                {{ form.submit(class="btn", id="submit-button") }}
               </div>
             </div>
           </form>
