--- a/botapp/templates/base.html
+++ b/botapp/templates/base.html
@@ -19,29 +19,22 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
     <!-- Custom Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,400i,500,500i,700,900" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
   </head>
-  <body>
-    <div class="container-fluid">
-      <header class="row">
-        <nav class="col-md-12 navbar">
-          <div class="navbar-header">
-            <h1 class="navbar-brand">GrandPy Bot</h1>
-          </div>
-          <span id="teaser" class="navbar-text">A la recherche d'un endroit?</span>
-        </nav>
-      </header>
+  <body id="global-container">
+      <nav class="global-element navbar" >
+        <div class="navbar-brand">
+            <h1>GrandPy Bot</h1>
+        </div>
+      </nav>
       {% block content %}{% endblock %}
 
-      <footer class="row text-center fixed-bottom">
-        <div class="col-lg-12">
-              <a href="https://github.com/JN-Lab/OC-Pr7-GrandPyBot" class="btn btn-social-icon btn-link" target="_blank"><i class="fab fa-github fa-3x footer-custom"></i></a>
-              <hr>
-            <span class="footer-custom">Julien Nuellas</span>
-          <p class="footer-custom">Projet d'Etude pour Openclassrooms</p>
-        </div>
+      <footer class="global-element">
+        <a href="https://github.com/JN-Lab/OC-Pr7-GrandPyBot" class="btn btn-social-icon btn-link" target="_blank"><i class="fab fa-github fa-3x footer-custom"></i></a>
+        <span class="footer-custom">Julien Nuellas</span>
+        <p class="footer-custom">Projet d'Etude pour Openclassrooms</p>
       </footer>
-    </div>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
