--- a/botapp/static/css/custom.css
+++ b/botapp/static/css/custom.css
@@ -97,22 +97,6 @@ h1 {
 
 }
 
-/* From Message Content Configuration: Avatar configuration */
-#message-nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  background-color: #FFFFFF;
-  height: 50px;
-}
-
-.message-nav-element {
-  flex: auto;
-  border: none;
-  font-weight: bold;
-  color
-}
-
 /* From Message Content Configuration: Title configuration */
 
 #message-title {
@@ -128,11 +112,34 @@ h1 {
 }
 
 #online-circle {
-  margin: 4px;
-  height: 8px;
-  width: 8px;
-  border-radius: 4px;
+  margin: 8px;
+  height: 10px;
+  width: 10px;
+  border-radius: 5px;
   background: #2E7D32;
+}
+
+
+/* From Message Content Configuration: Avatar configuration */
+
+#message-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: #FFFFFF;
+  height: 50px;
+}
+
+.message-nav-element {
+  flex: auto;
+  border: none;
+  font-weight: bold;
+  color: #232F34;
+}
+
+.message-nav-element:hover {
+  color: #F9AA33;
+  cursor: pointer;
 }
 
 /* From Message Content Configuration: Historic configuration */
@@ -161,6 +168,7 @@ h1 {
   flex-direction: row;
   justify-content: flex-start;
   height: 50px;
+  padding-left: 5px;
 }
 
 .message-input-element:nth-child(1) {
@@ -184,6 +192,10 @@ h1 {
   color: #F9AA33;
   font-weight: bold;
   background: none;
+}
+
+#submit-button:hover {
+  cursor: pointer;
 }
 
 /* Footer Configuration */
