--- a/botapp/templates/index.html
+++ b/botapp/templates/index.html
@@ -21,15 +21,25 @@
         <div class="message-title-element">GrandPy</div>
       </div>
 
-      {# Avatar Card if device is smartphone #}
+      {# Menu in order to print app information or chat with grandpy into message historic part #}
       <nav id="message-nav" class="message-element">
         <button id="chat-button" class="message-nav-element">CHAT</button>
         <button id="info-button" class="message-nav-element">INFOS</button>
       </nav>
 
       {# Where discussion between user and grandpy is printed #}
-      <div id="message-historic" class="message-element">
-        <p>Historique des échanges</p>
+      <div id="message-content" class="message-element">
+        <div id="info-container" class="content-element">
+          <div id="avatar-profile" class="info-element">
+          <div>
+          <div id="" class="info-element">
+          </div>
+          <div id="" class="info-element">
+          </div>
+        </div>
+        <div id="chat-container" class="content-element">
+          chat section
+        </div>
       </div>
 
       {# GrandPy Status Treatment - if he thinks, write, or nothing #}
