--- a/botapp/templates/base.html
+++ b/botapp/templates/base.html
@@ -9,9 +9,8 @@
 
     <title>GrandPy Bot - Le Gand-père incollable sur les lieux</title>
 
-    <!-- Bootstrap CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-
+    <!-- Material Design CSS -->
+    <link rel="stylesheet" href="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
 
@@ -22,25 +21,14 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
   </head>
   <body id="global-container">
-      <nav class="global-element navbar" >
-        <div class="navbar-brand">
-            <h1>GrandPy Bot</h1>
-        </div>
-      </nav>
+
       {% block content %}{% endblock %}
 
-      <footer class="global-element">
-        <a href="https://github.com/JN-Lab/OC-Pr7-GrandPyBot" class="btn btn-social-icon btn-link" target="_blank"><i class="fab fa-github fa-3x footer-custom"></i></a>
-        <span class="footer-custom">Julien Nuellas</span>
-        <p class="footer-custom">Projet d'Etude pour Openclassrooms</p>
-      </footer>
 
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 
+    <!-- Material Theming JavaScript -->
+    <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
     <!-- Custom Javascript -->
     <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
   </body>
