--- a/botapp/templates/index.html
+++ b/botapp/templates/index.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
+
+  <div id="tagline-container" class="global-element">
+    <p>GrandPy Bot</p>
+    <p>Demande-lui le lieu où tu souhaites te rendre <br> Et il te donnera toutes les informations nécessaires</p>
+  </div>
   <div id="main-container" class="global-element">
 
     {# Message Card #}
@@ -43,7 +48,7 @@
         <div id="chat-container" class="content-element">
           {# All the messages realized during discussions #}
           <div id="message-historic" class="chat-element">
-            historique des messages
+            {# where bubble will be pushed #}
           </div>
           {# GrandPy Status Treatment - if he thinks, write, or nothing #}
           <div id="message-status" class="chat-element">
