END of the day: next ToDo: mock for test_response.py

--- a/botapp/static/css/custom.css
+++ b/botapp/static/css/custom.css
@@ -177,7 +177,9 @@ h1 {
 .info-element:nth-child(1) {
 }
 .info-element:nth-child(2) {}
-.info-element:nth-child(3) {}
+.info-element:nth-child(3) {
+  align-self: flex-end;
+}
 
 #avatar-profile {
   display: flex;
