Integration of server treatment into view('treatment') on jsonify return

--- a/botapp/static/css/custom.css
+++ b/botapp/static/css/custom.css
@@ -246,10 +246,10 @@ h1 {
 }
 
 .chat-element:nth-child(1) {
+  overflow-y: scroll;
   flex:1;
 }
 .chat-element:nth-child(2) {}
-.chat-element:nth-child(3) {}
 
 #message-historic {
   display: flex;
