--- a/botapp/static/css/custom.css
+++ b/botapp/static/css/custom.css
@@ -6,6 +6,7 @@
 
 
 /* Global confguration */
+
 html, body {
   background-image: linear-gradient(to right bottom, #a3bded, #95b2e3, #86a7da, #789cd0, #6991c7);
   font-family: 'Roboto', sans-serif;
@@ -19,11 +20,21 @@ h1 {
   color: #F7F7FF;
 }
 
+p {
+    display: block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0;
+    margin-right: 0;
+}
+
 #global-container {
+
   display:flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+
   height: 100%;
   width: 100%;
 }
@@ -156,6 +167,7 @@ h1 {
   display: flex;
   flex-direction: column;
   background-color: #FFFFFF;
+  overflow: hidden;
 
 }
 
@@ -243,18 +255,22 @@ h1 {
 #chat-container {
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .chat-element:nth-child(1) {
-  overflow-y: scroll;
+  overflow: scroll;
+  transform: rotate(180deg);
+  direction: rtl;
   flex:1;
 }
 .chat-element:nth-child(2) {}
 
-#message-historic {
+#bubble-container {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  transform: rotate(180deg);
 }
 
 .speech-element {
