--- a/botapp/static/css/custom.css
+++ b/botapp/static/css/custom.css
@@ -318,7 +318,7 @@ p {
   top: 38px;
 	bottom: auto;
 	border: 12px solid;
-	border-color: #CFD8DC #CFD8DC transparent transparent;
+	border-color: #A3BDED #A3BDED transparent transparent;
 }
 
   .talktext {
