--- a/botapp/templates/base.html
+++ b/botapp/templates/base.html
@@ -32,5 +32,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     <!-- Custom Javascript -->
     <script src="{{ url_for('static', filename='js/custom.js') }}"></script>
+    <!-- GoogleMap API -->
+    <script src="https://maps.googleapis.com/maps/api/js?key={{ config.GOOGLE_API_KEY }}&callback=initMap" async defer></script>
   </body>
 </html>
