--- a/botapp/static/css/custom.css
+++ b/botapp/static/css/custom.css
@@ -379,6 +379,14 @@ p {
   background: none;
 }
 
+#message-field {
+}
+
+#submit-button {
+  text-align: center;
+  vertical-align: middle;
+}
+
 #submit-button:hover {
   cursor: pointer;
 }
@@ -389,4 +397,10 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.z-depth-0 {
+  -webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 0, 0, 0);
+  -moz-box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 0, 0, 0);
+  box-shadow: 0 0 0 0 rgba(0, 0, 0, 0), 0 0 0 0 rgba(0, 0, 0);
 }
