--- a/botapp/templates/index.html
+++ b/botapp/templates/index.html
@@ -9,7 +9,6 @@
 
     {# Message Card #}
     <div id="message-container" class="main-element">
-
       {# Title of message card #}
       <div id="message-title" class="message-element">
         <div id="online-circle" class="message-title-element"></div>
@@ -39,9 +38,15 @@
             Développeur d'Application Python proposée par Openclassrooms.</br>
             Réalisé par Julien Nuellas</p>
           </div>
-          <div id="social-link" class="info-element">
-            <div><a href="https://github.com/JN-Lab/OC-Pr7-GrandPyBot" class="" target="_blank"><i class="fab fa-github fa-3x"></i></a></div>
-            <div><a href="https://www.linkedin.com/in/julien-nuellas/" class="" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a></div>
+          <div id="social-link" class="info-element card-footer">
+            <ul>
+              <li>
+                <a href="https://github.com/JN-Lab/OC-Pr7-GrandPyBot" class="social-element" target="_blank"><i class="fab fa-github fa-3x" align="middle"></i></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/julien-nuellas/" class="social-element" target="_blank"><i class="fab fa-linkedin fa-3x"></i></a>
+              </li>
+            </ul>
           </div>
         </div>
         <div id="chat-container" class="content-element">
