Working oon loader message : some improvement to do on interval

--- a/botapp/templates/index.html
+++ b/botapp/templates/index.html
@@ -58,8 +58,8 @@
           </div>
           {# GrandPy Status Treatment - if he thinks, write, or nothing #}
           <div id="message-status" class="chat-element">
-              <div id="status-text" class="message-status-element">laisse moi réfléchir</div>
-              <div id="status-loading" class="message-status-element">...</div>
+              <div id="status-text" class="message-status-element"></div>
+              <div id="status-loading" class="message-status-element"></div>
           </div>
 
           {# Block where user writes messages #}
