--- a/botapp/static/css/custom.css
+++ b/botapp/static/css/custom.css
@@ -26,6 +26,7 @@ p {
     margin-bottom: 1em;
     margin-left: 0;
     margin-right: 0;
+    line-height: 140%;
 }
 
 #global-container {
@@ -284,7 +285,6 @@ p {
 .chat-element:nth-child(1) {
   overflow: scroll;
   transform: rotate(180deg);
-  direction: rtl;
   flex:1;
 }
 .chat-element:nth-child(2) {}
@@ -293,7 +293,7 @@ p {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  transform: rotate(180deg);
+  transform: rotate(-180deg);
 }
 
 .speech-element {
@@ -377,6 +377,7 @@ p {
   justify-content: flex-start;
   height: 50px;
   padding-left: 5px;
+  border-top: 2px solid #CFD8DC;
 }
 
 .message-input-element:nth-child(1) {
@@ -420,6 +421,10 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.loader-position {
+  margin: 30px;
 }
 
 .z-depth-0 {
