start migrate css on sass

--- a/botapp/static/css/custom.css
+++ b/botapp/static/css/custom.css
@@ -50,7 +50,7 @@ p {
   margin-right: 50px;
 }
 
-#main-container { /* Only child from global-container */
+#main-container {
   display : flex;
   flex-direction: row;
   width: 100%;
